# Call-me-Maybe

./: .gitignore  Makefile  README.md  context.txt  main.py  notes.md  pyproject.toml  requirements.txt
data/input/: function_calling_tests.json  functions_definition.json
data/output/: function_calling_results.json
src/: __init__.py  __main__.py  encoding.py  generate.py  generation.py  schema.py  trie.py  vocab.py
