[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Introduction to function calling in llm with constrained decoding"
requires-python = ">=3.10"
dependencies = [
    "flake8",
    "mypy",
    "llm-sdk",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk" }

[tool.mypy]
exclude = '^(|llm_sdk|.venv|)/'

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
